@@ -167,6 +167,29 @@ Oct&nbsp;1&nbsp;2002
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Oct&nbsp;7&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade Beta for GTK+ 2 And GNOME 2 Available</B>
+<P>
+Glade 2.0 is almost ready! You can download the latest beta from
+<a href="http://ftp.gnome.org/pub/GNOME/sources/glade/1.1/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/1.1/</a>.
+<P>
+Please report any bugs you find on <a href="http://bugzilla.gnome.org">
+bugzilla.gnome.org</a>, under the 'Glade' product.
+<P>
+PS. If you want to convert an old Glade project to the new Glade 2 format,
+there is a python conversion script included with
+<a href="http://www.daa.com.au/~james/gnome/">libglade</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Aug&nbsp;28&nbsp;2002
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -413,86 +436,6 @@ Oct&nbsp;10&nbsp;2000
 Roberto A. Foglietta has written an
 <A HREF="http://digilander.iol.it/robang/glade">Italian guide to Glade</A>.
 </font></td></tr>
-
-
-<tr valign="top">
-<td>&nbsp;&nbsp;&nbsp;</td>
-<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
-Oct&nbsp;1&nbsp;2000</b></font>
-</td>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
-<B>Glade 0.5.11 released !</B>
-<P>
-New in 0.5.11:
-
-<UL>
-<li>Added workaround for SEGV bug in GnomeMessageBox in gnome-libs 1.2.3.
-<li>A few changes in the generated code to keep g++ happy.
-<li>Added gtk_widget_grab_focus() and gtk_widget_activate_default() to the
-   lists of standard signal handlers.
-<li>Changed the widget tree view so it automatically expands to show selected
-   widgets.
-<li>Updates to Russian, Swedish, French, Korean and Japanese translations.
-</UL>
-</font></td></tr>
-
-
-<tr valign="top">
-<td>&nbsp;&nbsp;&nbsp;</td>
-<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
-Sep&nbsp;24&nbsp;2000</b></font>
-</td>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
-<B>Glade 0.5.10 released !</B>
-<P>
-New in 0.5.10:
-
-<UL>
-<li>Fixed code generation bug with GnomePropertyBox which caused a SEGV.
-<li>Added support for the "relief" property for GtkButton & GtkToggleButton.
-   This is the only change to the XML file format.
-<li>Fixed menu editor bug which meant that widgets were occasionally given
-   the same name.
-<li>Added support for tooltips for GtkRadioButton and GtkCheckButton.
-<li>Better support for keyboard navigation (from Jon K Hellan).
-<li>Fixed --write-source option so it handles relative paths (from Rick Niles).
-<li>Stopped installing logo into `gnome-config --datadir` since it causes
-   problems for people installing in personal directories etc. Also changed
-   the generated Makefile.am so it doesn't do it either.
-<li>Added 'Class' property to the property editor so you can see the class of
-   the selected widget (from Jon K Hellan).
-<li>Output the GtkOptionMenu and GtkCombo item strings separately in the
-   translatable strings file.
-<li>Allowed start & finish pages of a GnomeDruid to be removed, in case the
-   developer wants to replace them with custom pages.
-<li>Fixed the 'Redisplay Window' (Ctl-R) command so it should work again.
-<li>Added the XML file and the autogen.sh file to the EXTRA_DIST in the
-   generated Makefile.am so they get distributed with the project.
-</UL>
-</font></td></tr>
-
-
-<tr valign="top">
-<td>&nbsp;&nbsp;&nbsp;</td>
-<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
-May&nbsp;20&nbsp;2000</b></font>
-</td>
-<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
-<B>Glade 0.5.9 released !</B>
-<P>
-New in 0.5.9:
-
-<UL>
-<li>Added a Turbo-Start Guide from Paul J. Drongowski.
-<li>Patches from James M. Cape to allow setting of the Title of GnomeMessageBox
-   widgets, and setting all the standard window properties of GnomePropertyBox.
-<li>Updated Norwegian, Russian, Swedish, Japanese and German translations.
-</UL>
-</font></td></tr>
-
 
 
 <tr>
