@@ -1,3 +1,7 @@
+2002-10-07  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added link to Glade 2 betas.
+
 2002-10-06  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Gnopa.
